# Atakama

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  build.sh  generate.bat  generate.sh  imgui.ini  readme.md
Editor/: CMakeLists.txt
Editor/configs/: imgui.ini
Editor/resources/icons/: editor_icon_map.kra
Editor/src/: EditorApplication.cpp  EditorApplication.hpp  main.cpp  pch.hpp
Editor/src/Core/: EditorContext.cpp  EditorContext.hpp  IconMap.cpp  IconMap.hpp
Editor/src/ImGui/: IconButton.cpp  IconButton.hpp
Editor/src/Layer/: DepthViewLayer.cpp  DepthViewLayer.hpp  DocumentLayer.cpp  DocumentLayer.hpp  EditorConfigLayer.cpp  EditorConfigLayer.hpp  EditorLayer.cpp  EditorLayer.hpp  EditorUIConfig.cpp  EditorUIConfig.hpp  MenuBarLayer.cpp  MenuBarLayer.hpp  ProjectSettingsLayer.cpp  ProjectSettingsLayer.hpp  SceneLayer.cpp  SceneLayer.hpp  StatsLayer.cpp  StatsLayer.hpp  TestLayer.cpp  TestLayer.hpp  ViewportLayer.cpp  ViewportLayer.hpp
Editor/src/shaders/: grid.frag  grid.vert  lighting_shader.vert  outline.frag  point_light.frag  point_light.vert  screen_depth_shader.vert  simple_shader.vert  skybox.frag
Engine/: CMakeLists.txt
Engine/src/: pch.hpp
Engine/src/Atakama/Asset/: AssetLibrary.cpp  AssetLibrary.hpp  AssetManager.cpp  AssetManager.hpp  AssimpImporter.cpp  AssimpImporter.hpp  OBJImporter.cpp  OBJImporter.hpp
Engine/src/Atakama/Core/: Application.cpp  Application.hpp  Args.cpp  Args.hpp  FileSystem.cpp  FileSystem.hpp  GlobalContext.cpp  GlobalContext.hpp  InputSystem.cpp  InputSystem.hpp  Layer.cpp  Layer.hpp  Macro.hpp  Profiler.cpp  Profiler.hpp  Utils.hpp  Window.cpp  Window.hpp
Engine/src/Atakama/Engine/: AssetManager.cpp  AssetManager.hpp  Camera.cpp  Camera.hpp  CameraSystem.cpp  CameraSystem.hpp  Engine.cpp  Engine.hpp  FrameBuffer.hpp  Mesh.cpp  Mesh.hpp  MeshObject.cpp  MeshObject.hpp  RenderSystem.cpp  RenderSystem.hpp  RenderTypes.hpp  Scene.cpp  Scene.hpp  Shader.cpp  Shader.hpp  SubMesh.cpp  SubMesh.hpp  Texture.cpp  Texture.hpp  Vertex.cpp  Vertex.hpp  VertexArray.cpp  VertexBuffer.cpp  VertexBuffer.hpp  VertexBufferLayout.hpp
Engine/src/Atakama/Engine/Debug/OpenGL3/: OpenGL3Debug.cpp  OpenGL3Debug.hpp
Engine/src/Atakama/Engine/Lights/: PointLight.cpp
Engine/src/Atakama/Engine/OpenGL3/: OpenGL3FrameBuffer.cpp  OpenGL3FrameBuffer.hpp  OpenGL3IndexBuffer.cpp  OpenGL3IndexBuffer.hpp  OpenGL3RenderSystem.cpp  OpenGL3RenderSystem.hpp  OpenGL3ShaderBackend.cpp  OpenGL3ShaderBackend.hpp  OpenGL3Texture2D.cpp  OpenGL3Texture2D.hpp  OpenGL3TextureCube.cpp  OpenGL3TextureCube.hpp  OpenGL3VertexArray.cpp  OpenGL3VertexArray.hpp  OpenGL3VertexBuffer.cpp  OpenGL3VertexBuffer.hpp
Engine/src/Atakama/Engine/Perf/: PerfMonitor.cpp
Engine/src/Atakama/Engine/Platform/: GraphicsContext.cpp  GraphicsContext.hpp  PlatformContext.cpp
Engine/src/Atakama/Engine/Platform/OpenGL3/: OpenGL3GraphicsContext.cpp  OpenGL3GraphicsContext.hpp
Engine/src/Atakama/Engine/RenderPass/: DebugRenderPass.cpp  DebugRenderPass.hpp  DepthViewRenderPass.cpp  DepthViewRenderPass.hpp  EditorRenderPass.cpp  EditorRenderPass.hpp  MainRenderPass.cpp  MainRenderPass.hpp  OutlineRenderPass.cpp  OutlineRenderPass.hpp  RenderPass.cpp  RenderPass.hpp  SkyBoxRenderPass.cpp  SkyBoxRenderPass.hpp  ViewportRenderPass.cpp  ViewportRenderPass.hpp
Engine/src/Atakama/Engine/Renderer/: LightingRenderer.cpp  LightingRenderer.hpp  PointLightRenderer.cpp  PointLightRenderer.hpp  Renderer.hpp  SimpleRenderer.cpp  SimpleRenderer.hpp  UIRenderer.cpp
Engine/src/Atakama/Engine/Shaders/: SimpleShader.hpp
Engine/src/Atakama/Events/: DropEvent.hpp  Event.hpp  EventDispatcher.hpp  KeyEvent.hpp  MouseEvent.hpp  WindowEvent.hpp
Engine/src/Atakama/ImGui/: FileDialog.cpp  FileDialog.hpp  ImGuiLayer.cpp  ImGuiLayer.hpp
Engine/src/Atakama/Log/: LogSystem.cpp  LogSystem.hpp
Engine/src/Atakama/Scene/: Entity.cpp  Entity.hpp  Scene.cpp  Scene.hpp
Engine/src/Atakama/Scene/Components/: Components.cpp  Components.hpp  TransformComponent.cpp  TransformComponent.hpp
Runtime/: CMakeLists.txt
Runtime/src/: RuntimeApplication.cpp  RuntimeApplication.hpp  main.cpp  pch.hpp
Sandbox/: CMakeLists.txt
Sandbox/src/: SandboxApplication.cpp  SandboxApplication.hpp  main.cpp  pch.hpp
cmake/: add_asset.cmake  source_group_by_folder.cmake
docs/: development.md
src/: Application.cpp  Application.hpp  Args.cpp  Args.hpp  AssetManager.cpp  AssetManager.hpp  Camera.cpp  Camera.hpp  Engine.cpp  Engine.hpp  FileSystem.cpp  FileSystem.hpp  Filesystem.cpp  Filesystem.hpp  GlobalContext.cpp  GlobalContext.hpp  Input.cpp  Input.hpp  Macro.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  ModelUtils.cpp  ModelUtils.hpp  Scene.cpp  Scene.hpp  Shader.cpp  Shader.hpp  SubMesh.cpp  SubMesh.hpp  Texture.cpp  Texture.hpp  Window.cpp  Window.hpp  main.cpp  pch.hpp
src/Debug/: Debug.cpp  Debug.hpp
src/Engine/: AssetManager.cpp  AssetManager.hpp  Camera.cpp  Camera.hpp  CameraSystem.cpp  CameraSystem.hpp  Engine.cpp  Engine.hpp  FrameBuffer.cpp  FrameBuffer.hpp  IndexBuffer.cpp  IndexBuffer.hpp  InputSystem.cpp  InputSystem.hpp  Mesh.cpp  Mesh.hpp  RenderSystem.cpp  RenderSystem.hpp  RenderTypes.hpp  Scene.cpp  Scene.hpp  Shader.cpp  Shader.hpp  SubMesh.cpp  SubMesh.hpp  Texture.cpp  Texture.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp  VertexBufferLayout.cpp  VertexBufferLayout.hpp
src/Events/: Event.cpp  Event.hpp  EventDispatcher.hpp  KeyEvent.hpp  MouseEvent.hpp  WindowEvent.hpp
src/Lights/: PointLight.cpp
src/Log/: LogSystem.cpp  LogSystem.hpp
src/Math/: Transform.cpp  Transform.hpp
src/Perf/: PerfMonitor.cpp  PerfMonitor.hpp
src/Platform/: GraphicsContext.cpp  GraphicsContext.hpp  PlatformContext.hpp
src/Render/: RenderSystem.cpp  RenderSystem.hpp  VertexBuffer.cpp  VertexBuffer.hpp
src/Renderer/: LightingRenderer.cpp  LightingRenderer.hpp  PointLightRenderer.cpp  PointLightRenderer.hpp  Renderer.cpp  Renderer.hpp  ScreenDepthRenderer.cpp  ScreenDepthRenderer.hpp  ScreenRenderer.cpp  ScreenRenderer.hpp  SimpleRenderer.cpp  SimpleRenderer.hpp  (+4 more)
(+64 files in other folders)
